--- a/css/mobile.css
+++ b/css/mobile.css
@@ -49,6 +49,14 @@
     width: 70px;
     height: 70px;
     font-size: 1.75rem;
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
+  }
+  
+  /* Touch-Feedback für D-Pad */
+  .d-pad-button:active {
+    transform: scale(0.95);
+    opacity: 0.8;
   }
   
   /* Game Header kompakter */
@@ -128,12 +136,24 @@
 @supports (-webkit-touch-callout: none) {
   .game-canvas {
     -webkit-touch-callout: none;
+    touch-action: none; /* Verhindert alle Touch-Gesten außer unseren */
   }
   
   .game-button,
   .d-pad-button {
     -webkit-touch-callout: none;
+    -webkit-user-select: none;
   }
+}
+
+/* Canvas Touch-Optimierung für alle Geräte */
+.game-canvas {
+  touch-action: none; /* Verhindert Scroll, Zoom, etc. */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* Android-spezifische Optimierungen */
